Truncate long descriptions if necessary, make (More...) work (bug 887800)

--- a/hearth/media/css/detail.styl
+++ b/hearth/media/css/detail.styl
@@ -52,15 +52,34 @@
         margin: 0;
         padding: 5px 10px;
     }
+    .description-wrapper {
+        padding: 0;
+
+        &.truncated {
+            max-height: 16.5em;
+            overflow: hidden;
+            position: relative;
+
+            &:after {
+                bottom: 0;
+                content: '';
+                gradientTop(unquote('rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%'));
+                height: 6.5em;
+                left: 0;
+                pointer-events: none;
+                position: absolute;
+                width: 100%;
+                z-index: 10;
+            }
+        }
+    }
 }
 
 .show-toggle {
-    display: block;
+    display: none; /* toggled in js */
     float: right;
     font-weight: bold;
-    margin: -5px -10px 0 0;
-    padding: 5px 10px 10px;
-    text-align: right;
+    padding: 10px;
     text-transform: lowercase;
     &:before {
         content: "(";
@@ -231,7 +250,7 @@
             line-height: 21px;
         }
     }
-    .blurbs > div {
+    .description-wrapper {
         p.description {
             padding-top: 0;
         }
